--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,3 +17,8 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
     - run: ./gradlew :app:assembleRegularDebug
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-regular-debug
+        path: *
